Fixed book cover modal alignment

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -716,7 +716,7 @@ div.activity-card {
   box-shadow: none;
 }
 
-div.modal-dialog {
+div.preview-modal .modal-dialog {
   margin-top: 10%;
 }
 
